--- a/AndersonNotification/AndersonNotificationFunction/AndersonNotificationFunction.csproj
+++ b/AndersonNotification/AndersonNotificationFunction/AndersonNotificationFunction.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\..\..\DLL\Release\Base\BaseModel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
