https://trello.com/c/qXS8Aj0X/207-2018-03-09-create-postman-for-andersonnotification   Created test Api Controller   Updated Web Api Route to include actions   Updated Postman to have test Api end points for testing. https://trello.com/c/Irk0CSuS/209-2018-03-12-create-desktop-project-for-connection-testing   Created desktop project     Create hard coded connection to web api   Updated solution to Run both desktop and web application at the same time

--- a/AndersonNotification/AndersonNotificationWeb/AndersonNotificationWeb.csproj
+++ b/AndersonNotification/AndersonNotificationWeb/AndersonNotificationWeb.csproj
@@ -399,6 +399,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="APIControllers\BaseApiController.cs" />
+    <Compile Include="APIControllers\TestApiController.cs" />
     <Compile Include="APIControllers\EmailNotificationApiController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -624,8 +625,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="bower_components\pnotify\libtests\requirejs\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\BaseApi\" />
-    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AndersonNotificationData\AndersonNotificationData.csproj">
