https://trello.com/c/MTEHnH3Z/215-2018-03-28-create-api-consumer-project-that-will-be-used-by-other-systems   Created EmailNotification and Test Api consume class   Updated the test desktop application to use the new class

--- a/AndersonNotification/AndersonNotificationConsumer/AndersonNotificationConsumer.csproj
+++ b/AndersonNotification/AndersonNotificationConsumer/AndersonNotificationConsumer.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\..\DLL\Debug\AndersonNotification\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,12 +24,13 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\..\DLL\Release\AndersonNotification\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BaseConsumer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -54,7 +55,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AndersonNotificationConsumerBase.cs" />
+    <Compile Include="IEmailNotificationApi.cs" />
     <Compile Include="ITestApi.cs" />
+    <Compile Include="EmailNotificationApi.cs" />
     <Compile Include="TestApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
